--- a/practice.html
+++ b/practice.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Day 2 Practice </h1>
+  </head>
+  <body>
+    <h1>Day 2 Practice</h1>
     <p>Git is version control system to keep track of changes</p>
-</body>
+
+    <button type="button">Click Me!</button>
+    <button type="button">Click Me to Reset!</button>
+    <button type="button" disabled>Click Me to Summit!</button>
+
+    <input type="text" disabled />
+    <input type="checkbox" checked />
+
+    <label for="state">Choose a state:</label>
+
+
+
+    <select name="State" id="state">
+      <option value="VA">Virginia</option>
+      <option value="NY">New York</option>
+      <option value="DC">Washington DC</option>
+      <option value="MD">Maryland</option>
+    </select>
+  </body>
 </html>
